# ConfigCollectorWindows

./: .gitignore  Cargo.toml  README.md  help.md
.github/workflows/: build-release.yml  build.yml
config/: app_config.toml  channels.txt
src/: config_extractor.py  config_tester.py  main.rs
