[package]
name = "config-collector"
version = "1.0.0"
edition = "2021"

[dependencies]
eframe = "0.24"
egui = "0.24"
reqwest = { version = "0.11", features = ["blocking", "socks"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
toml = "0.8"
chrono = "0.4"
regex = "1.10"
base64 = "0.21"
url = "2.5"
anyhow = "1.0"

[profile.release]
opt-level = 3
lto = true
